(Ada) revise testing
- instead of running compile_tests and sage_interfaceTests on the
  original code base,
  followed by recompile tests on the output produced in the first phase,
  just run compile_tests on the original code base
  followed by sage_interfaceTests on the output of the compile_test.

RC-1540

--- a/tests/nonsmoke/functional/CompileTests/experimental_ada_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_ada_tests/Makefile.am
@@ -62,7 +62,9 @@ TESTCODES_REQUIRED_TO_PASS := $(TEST_TARGETS)
 #
 # targets
 .PHONY: all
-all: passing
+all: 
+
+#~passing
 
 .PHONY: passing
 passing: $(TEST_TARGETS)
