(ProgramAnalysis) Revise user interface for mod-read-call set analysis.
Add AstUtilInterface.h/cpp to support side effect collection in ROSE/src/midend/astUtil.  Revise interface of StmtSideEffectCollect to make AstNodePtr a template parameter.  Revise other related files that use AstInterface and AstNodePtr.

RC238

--- a/src/midend/astUtil/CMakeLists.txt
+++ b/src/midend/astUtil/CMakeLists.txt
@@ -15,8 +15,8 @@ add_library(midend_util OBJECT
   annotation/OperatorDescriptors.C
   annotation/AnnotExpr.C
   annotation/TypeAnnotation.C
-  astSupport/ProcessAstTree.C
-  astSupport/StmtInfoCollect.C)
+  astSupport/StmtInfoCollect.C
+  AstUtilInterface.C)
 add_dependencies(midend_util rosetta_generated)
 
 add_subdirectory(astInterface)
