--- a/src/midend/astUtil/Makefile_variables
+++ b/src/midend/astUtil/Makefile_variables
@@ -14,18 +14,21 @@ mauSymbolicValPath=$(mAstUtilPath)/symbolicVal#
 # ------------------------------------------------------------------------------
 
 mAstUtil_la_sources=\
+	$(mAstUtilPath)/AstUtilInterface.C \
 	$(mauAnnotation_la_sources) \
 	$(mauAstInterface_la_sources) \
 	$(mauAstSupport_la_sources) \
 	$(mauSymbolicVal_la_sources)
 
 mAstUtil_includeHeaders=\
+	$(mAstUtilPath)/AstUtilInterface.h \
 	$(mauAnnotation_includeHeaders) \
 	$(mauAstInterface_includeHeaders) \
 	$(mauAstSupport_includeHeaders) \
 	$(mauSymbolicVal_includeHeaders)
 
 mAstUtil_extraDist=\
+	$(mAstUtilPath)/AstUtilInterface.h \
 	CMakeLists.txt \
 	$(mauAnnotation_extraDist) \
 	$(mauAstInterface_extraDist) \
@@ -33,12 +36,14 @@ mAstUtil_extraDist=\
 	$(mauSymbolicVal_extraDist)
 
 mAstUtil_cleanLocal=\
+	rm AstUtilInterface.o; \
 	$(mauAnnotation_cleanLocal); \
 	$(mauAstInterface_cleanLocal); \
 	$(mauAstSupport_cleanLocal); \
 	$(mauSymbolicVal_cleanLocal)
 
 mAstUtil_distCleanLocal=\
+	rm AstUtilInterface.o; \
 	$(mauAnnotation_distCleanLocal); \
 	$(mauAstInterface_distCleanLocal); \
 	$(mauAstSupport_distCleanLocal); \
