--- a/tests/nonsmoke/specimens/Makefile.am
+++ b/tests/nonsmoke/specimens/Makefile.am
@@ -1,6 +1,2 @@
 include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
-SUBDIRS = binary c c++ fortran
-
-if ROSE_BUILD_BINARY_ANALYSIS_SUPPORT
-   SUBDIRS += java
-endif
+SUBDIRS = binary c c++ fortran java
