(Architecture) Add directories, build rules, and first files
* Starting work on the Rose::BinaryAnalysis::Architecture subsystem
  for defining architectures at the user's level. The idea is that the
  user can define their own architectures without recompiling all of
  the ROSE library. The architecture definitions are registered with
  the library at runtime.

* This commit adds the Rose::BinaryAnalysis::Architecture namespace
  and a stub for its Base class.

* This commit adds the CMake, Tup, and Autotools files necessary for
  building the new namespace.

RPM-520

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,6 +146,7 @@ set(rose_LIB_OBJS
   roseAstNodesExpression
   roseNamespace
   roseBinaryAnalysis
+  roseBinaryAnalysisArchitecture
   roseBinaryAnalysisByteCode
   roseBinaryAnalysisConcolic
   roseBinaryAnalysisConcolicCallback
