--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -38,6 +38,7 @@ librose_partial_la_SOURCES =								\
 	AST/Utils.C									\
 	AST/utils/edge_ptr_repl.C							\
 	BinaryAnalysis/AbstractLocation.C						\
+	BinaryAnalysis/Architecture/Base.C						\
 	BinaryAnalysis/AsmFunctionIndex.C						\
 	BinaryAnalysis/AstHash.C							\
 	BinaryAnalysis/BestMapAddress.C							\
