--- a/src/Rose/BinaryAnalysis/Architecture/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Architecture/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(roseBinaryAnalysisArchitecture OBJECT
   Base.C
   BasicTypes.C
+  Exception.C
 )
 
 add_dependencies(roseBinaryAnalysisArchitecture rosetta_generated)
@@ -8,6 +9,7 @@ add_dependencies(roseBinaryAnalysisArchitecture rosetta_generated)
 install(FIELS
   Base.h
   BasicTypes.h
+  Exception.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/Architecture)
 
