(Architecture) Created classes for each architecture; register dictionaries
* A class for each architecture.

* Register dictionaries are created by calling the original
  RegisterDictionary::instance* constructors, but this should be
  changed in the future by removing all architecture-specific
  information from the RegisterDictionary.C file to the Architecture
  files.

RPM-530

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -689,6 +689,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose \
 			 @top_srcdir@/src/Rose/AST \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Architecture \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/Callback \
