(Architecture) Insn decoders are part of the architecture
*** API CHANGE ***

* Instruction decoders (disassemblers) are no longer registered as
  stand-alone objects. Instead, they are created by their respective
  Architecture subclasses using the `newInstructionDecoder` method.

  Old code:
      Disassembler::Base::Ptr d = Disassembler::lookup(header);

  New code:
      Disassembler::Base::Ptr d =
          Architecture::findByHeader(header).orThrow()
	  ->newInstructionDecoder();

  Where `Architecture::findByHeader` looks up the architecture
  corresponding to a file header (`SgAsmGenericHeader`) and returns a
  `Sawyer::Result` which is either a non-null architecture pointer or
  an error.

  Where `orThrow()` either returns the non-null architecture pointer
  if it's present, or throws the `NotFound` error if the architecture
  was not found.

  Where `newInstructionDecoder` creates a new instruction decoder based
  on the architecture.

*** Other changes ***

* Overloaded StringUtility::joinEnglish so it can take a set of
  strings or a vector of strings as the first argument.

* Reformatted BinaryComposite.C for consistency with most other binary
  analysis source code, and fixed bug related to partitioning file
  headers into interpretations.

RPM-556

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -275,6 +275,7 @@ nobase_pkginclude_HEADERS=								\
 	BinaryAnalysis/Architecture/ArmAarch64.h					\
 	BinaryAnalysis/Architecture/Base.h						\
 	BinaryAnalysis/Architecture/BasicTypes.h					\
+	BinaryAnalysis/Architecture/Cil.h						\
 	BinaryAnalysis/Architecture/Exception.h						\
 	BinaryAnalysis/Architecture/Intel80286.h					\
 	BinaryAnalysis/Architecture/Intel8086.h						\
@@ -285,6 +286,7 @@ nobase_pkginclude_HEADERS=								\
 	BinaryAnalysis/Architecture/IntelPentiumii.h					\
 	BinaryAnalysis/Architecture/IntelPentiumiii.h					\
 	BinaryAnalysis/Architecture/IntelPentium4.h					\
+	BinaryAnalysis/Architecture/Jvm.h						\
 	BinaryAnalysis/Architecture/Mips32.h						\
 	BinaryAnalysis/Architecture/Motorola68040.h					\
 	BinaryAnalysis/Architecture/NxpColdfire.h					\
