(Architecture) Added partitioner function prologues to architectures
* Function prologue matches are now part of the Architecture API.

* P2::EngineBinary obtains function prologue matches from the
  Architecture API.

RPM-583

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -288,10 +288,13 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/Architecture/IntelPentium4.h				\
 	Rose/BinaryAnalysis/Architecture/Jvm.h						\
 	Rose/BinaryAnalysis/Architecture/Mips32.h					\
+	Rose/BinaryAnalysis/Architecture/Motorola.h					\
 	Rose/BinaryAnalysis/Architecture/Motorola68040.h				\
 	Rose/BinaryAnalysis/Architecture/NxpColdfire.h					\
+	Rose/BinaryAnalysis/Architecture/Powerpc.h					\
 	Rose/BinaryAnalysis/Architecture/Powerpc32.h					\
 	Rose/BinaryAnalysis/Architecture/Powerpc64.h					\
+	Rose/BinaryAnalysis/Architecture/X86.h						\
 	Rose/BinaryAnalysis/AsmFunctionIndex.h						\
 	Rose/BinaryAnalysis/AstHash.h							\
 	Rose/BinaryAnalysis/BasicTypes.h						\
