(Utility) Functional assertions with Rose::affirm
* Similar to assert, except it's an expression.

* Overloaded function:
    + affirm(value)
    + affirm(value, predicate)
    + affirm(value, message)
    + affirm(value, predicate, message)
    + notnull(pointer)

* One new macro for those who like macros:
    + ROSE_AFFIRM(value, predicate)

* Documentation with examples

* Unit tests for all functions and macros

* Some programmers call this feature "unwrap" but I chose "affirm"
  because it doesn't actually unwrap anything. I avoided "assert"
  since that's a common CPP macro.

* Here's one example using notnull.

        // Return the non-null type or throw
        SgType* assignmentType(SgAssignOp *assign) {
            ROSE_ASSERT(assign != nullptr);
            SgExpression *temp = assign->get_rhs_operand();
            ROSE_ASSERT(temp != nullptr);
            SgType *type = temp->get_type();
            ROSE_ASSERT(type != nullptr);
            return type;
        }

  New code:

        // Return the non-null type or throw
        SgType* assignmentType(SgAssignOp *assign) {
            return notnull(notnull(notnull(assign)->get_rhs_operand())->get_type());
        }

  If one of these is a null pointer, the following exception is
  thrown:

        Rose::AffirmationError: null pointer

* This is also convenient in constructors:

        Foo::Foo(Thing *thing): thing(notnull(thing)) {}

* Here's an example using the macro to convert a signed value to an
  unsigned value (although you could also use boost::numeric_cast
  except it doesn't throw an error derived from Rose::Exception):

        size_t n = ROSE_AFFIRM(f.tellp(), x >= 0);

RPM-585

--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -29,6 +29,7 @@ add_dependencies(roseNamespace rosetta_generated)
 
 # Public header files for the ::Rose namespace (see top comment)
 install(FILES
+  Affirm.h
   BasicTypes.h
   BinaryAnalysis.h
   BitFlags.h
