--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -258,6 +258,7 @@ pkginclude_HEADERS = \
 # Header files organized by namespace. If the directory part of the name doesn't match
 # a C++ namespace, then DO NOT put the header file in this list.
 nobase_pkginclude_HEADERS=								\
+	Rose/Affirm.h									\
 	Rose/AST.h									\
 	Rose/AST/Checker.h								\
 	Rose/AST/cmdline.h								\
