--- a/src/frontend/Disassemblers/Makefile.am
+++ b/src/frontend/Disassemblers/Makefile.am
@@ -9,7 +9,7 @@ libroseDisassemblers_la_DEPENDENCIES =
 
 libroseDisassemblers_la_SOURCES = SgAsmBlock.C SgAsmFunction.C					\
 	SgAsmInstruction.C SgAsmAarch32Instruction.C SgAsmPEExportEntry.C			\
-	SgAsmAarch64Instruction.C SgAsmPowerpcInstruction.C					\
+	SgAsmAarch64Instruction.C SgAsmPowerpcInstruction.C SgAsmUserInstruction.C		\
 	SgAsmX86Instruction.C SgAsmCilInstruction.C SgAsmJvmInstruction.C			\
 	SgAsmMipsInstruction.C SgAsmM68kInstruction.C SgAsmNullInstruction.C			\
 	SgAsmExecutableFileFormat.C x86InstructionProperties.C					\
@@ -21,9 +21,9 @@ libroseDisassemblers_la_SOURCES = SgAsmBlock.C SgAsmFunction.C					\
 	AssemblerX86Init4.C AssemblerX86Init5.C AssemblerX86Init6.C				\
 	AssemblerX86Init7.C AssemblerX86Init8.C AssemblerX86Init9.C
 
-pkginclude_HEADERS = BitPattern.h			\
-	Assembler.h AssemblerX86.h					\
-	AssemblerX86Init.h 					\
+pkginclude_HEADERS = BitPattern.h		\
+	Assembler.h AssemblerX86.h		\
+	AssemblerX86Init.h			\
 	x86InstructionProperties.h
 
 EXTRA_DIST = CMakeLists.txt dummyDisassembler.C
