--- a/docs/RoseUser.cfg
+++ b/docs/RoseUser.cfg
@@ -84,7 +84,7 @@ DOXYFILE_ENCODING      = UTF-8
 # title of most generated pages and in a few other places.
 # The default value is: My Project.
 
-PROJECT_NAME           = "ROSE"
+PROJECT_NAME           = "ROSE User API Documentation"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This
 # could be handy for archiving the generated documentation or if some version
@@ -410,6 +410,27 @@ TOC_INCLUDE_HEADINGS   = 5
 # globally by setting AUTOLINK_SUPPORT to NO.
 # The default value is: YES.
 
+# This is turned off in ROSE because it has some problems. Instead, use @ref to
+# make cross references.  The main problems with autolink being turned on are:
+#
+#   (1) Many classes in ROSE are English words, which means each time we add
+#       such a class we need to review *all* the documentation and add "%" to
+#       each of those words that already existed and were not intended to be a
+#       cross reference. Doing so is painful since the word probably appears
+#       inside documentation comments and elswhere in ROSE source code.
+#
+#   (2) The documentation writer must either keep in mind all English words that
+#       are also C++ symbols so they can be prefixed with "%" when writing
+#       documentation. Or else the author should prefix *every* capitalized word
+#       with "%" which makes the documentation hard to read in the source code.
+#
+#   (3) If symbol's name is changed, then *all* the documentation must be searched
+#       to find automatic references to the old name to change it to the new name,
+#       since Doxygen won't generate warnings in all situations. To make it more
+#       difficult, symbols in the documentation are not usually fully qualified.
+#
+# For these reasons, get in the habit of using @ref to make a cross reference
+# every time you want one.
 AUTOLINK_SUPPORT       = NO
 
 # If you use STL classes (i.e. std::string, std::vector, etc.) but do not want
@@ -637,7 +658,7 @@ HIDE_IN_BODY_DOCS      = NO
 
 # We are generating _user_ documentation, not _core_developer_ documentation,
 # therefore we hide internal documentation.
-INTERNAL_DOCS          = YES
+INTERNAL_DOCS          = NO
 
 # With the correct setting of option CASE_SENSE_NAMES doxygen will better be
 # able to match the capabilities of the underlying filesystem. In case the
@@ -779,7 +800,9 @@ GENERATE_DEPRECATEDLIST= YES
 # sections, marked by \if <section_label> ... \endif and \cond <section_label>
 # ... \endcond blocks.
 
-ENABLED_SECTIONS       =
+# The sections used here are:
+#    rosedoc2024  -- documentation reorganization and improvement started Dec 2023
+ENABLED_SECTIONS       = rosedoc2024
 
 # The MAX_INITIALIZER_LINES tag determines the maximum number of lines that the
 # initial value of a variable or macro / define can have for it to appear in the
@@ -927,7 +950,9 @@ WARN_LOGFILE           =
 
 INPUT                  = $(ROSE_SOURCE)/src/Rose \
 		         $(ROSE_SOURCE)/src/AstNodes \
-			 $(ROSE_SOURCE)/src/util/Sawyer
+			 $(ROSE_SOURCE)/src/util/Sawyer \
+			 $(ROSE_SOURCE)/docs/Rose/BinaryAnalysisMainPage.dox \
+			 $(ROSE_SOURCE)/docs/Rose/heapObjectOwnership.dox
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -956,6 +981,9 @@ INPUT_ENCODING         = UTF-8
 # *.py, *.pyw, *.f90, *.f95, *.f03, *.f08, *.f18, *.f, *.for, *.vhd, *.vhdl,
 # *.ucf, *.qsf and *.ice.
 
+# ROSE's policy is that all public header files end with ".h", and all public
+# documentation is in the header files (not implementation files) so that it
+# is available to the user in its raw form when ROSE is installed.
 FILE_PATTERNS          = *.h
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
@@ -995,10 +1023,21 @@ EXCLUDE_PATTERNS       =
 # wildcard * is used, a substring. Examples: ANamespace, AClass,
 # AClass::ANamespace, ANamespace::*Test
 #
-# Note that the wildcards are matched against the file with absolute path, so to
-# exclude all test directories use the pattern */test/*
 
-EXCLUDE_SYMBOLS        =
+# The following items are excluded due to naming convention violations.
+# See the output from the RoseNamespace policy checker. If these are truly
+# internal types, then they should either not have doxygen documentation or
+# they should be marked as @internal.
+#
+#     Rose::AST::cmdline       -- namespace is not PascalCase
+#     Rose::Defects::defect_t  -- type name is not PascalCase
+#     Rose::CodeGen            -- "Gen" is not an English word
+#     Rose::metaprog           -- namespace is not PascalCase
+
+EXCLUDE_SYMBOLS        = Rose::AST::cmdline \
+		         Rose::Defects::defect_t \
+			 Rose::CodeGen \
+			 Rose::metaprog
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or directories
 # that contain example code fragments that are included (see the \include
@@ -1006,7 +1045,8 @@ EXCLUDE_SYMBOLS        =
 
 EXAMPLE_PATH           = $(ROSE_SOURCE)/tests/smoke/unit/Sawyer \
 		         $(ROSE_SOURCE)/tests/nonsmoke/functional/BinaryAnalysis \
-			 $(ROSE_SOURCE)/src/util/Sawyer/docs/examples
+			 $(ROSE_SOURCE)/src/util/Sawyer/docs/examples \
+			 $(ROSE_SOURCE)/tutorial/binaryAnalysis
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
@@ -1325,7 +1365,7 @@ HTML_EXTRA_FILES       =
 # Minimum value: 0, maximum value: 359, default value: 220.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_COLORSTYLE_HUE    = 180
+HTML_COLORSTYLE_HUE    = 14
 
 # The HTML_COLORSTYLE_SAT tag controls the purity (or saturation) of the colors
 # in the HTML output. For a value of 0 the output will use grayscales only. A
@@ -1333,7 +1373,7 @@ HTML_COLORSTYLE_HUE    = 180
 # Minimum value: 0, maximum value: 255, default value: 100.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_COLORSTYLE_SAT    = 100
+HTML_COLORSTYLE_SAT    = 255
 
 # The HTML_COLORSTYLE_GAMMA tag controls the gamma correction applied to the
 # luminance component of the colors in the HTML output. Values below 100
@@ -1344,7 +1384,7 @@ HTML_COLORSTYLE_SAT    = 100
 # Minimum value: 40, maximum value: 240, default value: 80.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_COLORSTYLE_GAMMA  = 80
+HTML_COLORSTYLE_GAMMA  = 120
 
 # If the HTML_TIMESTAMP tag is set to YES then the footer of each generated HTML
 # page will contain the date and time when the page was generated. Setting this
@@ -1372,7 +1412,7 @@ HTML_DYNAMIC_MENUS     = YES
 # The default value is: NO.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_DYNAMIC_SECTIONS  = YES
+HTML_DYNAMIC_SECTIONS  = NO
 
 # With HTML_INDEX_NUM_ENTRIES one can control the preferred number of entries
 # shown in the various tree structured indices initially; the user can expand
@@ -1385,7 +1425,7 @@ HTML_DYNAMIC_SECTIONS  = YES
 # Minimum value: 0, maximum value: 9999, default value: 100.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_INDEX_NUM_ENTRIES = 100
+HTML_INDEX_NUM_ENTRIES = 1
 
 # If the GENERATE_DOCSET tag is set to YES, additional index files will be
 # generated that can be used as input for Apple's Xcode 3 integrated development
@@ -2149,7 +2189,7 @@ XML_NS_MEMB_FILE_SCOPE = NO
 # that can be used to generate PDF.
 # The default value is: NO.
 
-GENERATE_DOCBOOK       = YES
+GENERATE_DOCBOOK       = NO
 
 # The DOCBOOK_OUTPUT tag is used to specify where the Docbook pages will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be put in
@@ -2437,7 +2477,7 @@ CLASS_GRAPH            = YES
 # The default value is: YES.
 # This tag requires that the tag HAVE_DOT is set to YES.
 
-COLLABORATION_GRAPH    = YES
+COLLABORATION_GRAPH    = NO
 
 # If the GROUP_GRAPHS tag is set to YES then doxygen will generate a graph for
 # groups, showing the direct groups dependencies.
@@ -2452,7 +2492,7 @@ GROUP_GRAPHS           = YES
 # The default value is: NO.
 # This tag requires that the tag HAVE_DOT is set to YES.
 
-UML_LOOK               = NO
+UML_LOOK               = YES
 
 # If the UML_LOOK tag is enabled, the fields and methods are shown inside the
 # class node. If there are many fields or methods and many nodes the graph may
