(AstUtil) Add support for AST diff from different versions of the same file.
Add new interface function AstIdentical to the AstInterface class.
Add new interface  GetVariableSignature to the AstUtilInterface class.
Restored previously commented out code for supporting POET-ROSE connection, so
astDiff can optionally use POET to extend the ROSE IR to output result.

RC-238

--- a/src/3rdPartyLibraries/POET/Makefile.am
+++ b/src/3rdPartyLibraries/POET/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
+
 
 noinst_LTLIBRARIES = libpoet.la
 libpoet_la_SOURCES=poet_AST.cpp codegen.cpp  parse.cpp evalOp.cpp driver.cpp poet_yacc.c poet_lex.c timing.cpp AutoTuningInterface.cpp eval.cpp eval_ext.cpp tokenize.cpp 
@@ -7,5 +9,5 @@ EXTRA_DIST = poet_yacc.y poet_lex.l poet_ASTfactory.h poet_SymbolTable.h poet_AS
 AM_YFLAGS=-d -v
 
 #Faizur:(07/21/2011): For CMAKE the POET_VERSION is defined in src/CMakeLists.txt
-INCLUDES = -DPOET_VERSION="\"1.03.13\"" -DPOET_LIB_DIR=\"$(DESTDIR)/$(libdir)/\" -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/driver -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/slicing -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/computation -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/depGraph -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/depInfo -I$(top_srcdir)/src/midend/astUtil/astInterface -I$(top_srcdir)/src/midend/astUtil/astSupport -I$(top_srcdir)/src/midend/astUtil/symbolicVal -I$(top_srcdir)/src/util/support -I$(top_srcdir)/src/util/graphs -I$(top_srcdir)/src/frontend/SageIII
+INCLUDES = -DPOET_VERSION="\"1.03.13\"" -DPOET_LIB_DIR=\"$(DESTDIR)/$(libdir)/\" $(ROSE_INCLUDES) -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/driver -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/slicing -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/computation -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/depGraph -I$(top_srcdir)/src/midend/programTransformation/loopProcessing/depInfo -I$(top_srcdir)/src/midend/astUtil/astInterface -I$(top_srcdir)/src/midend/astUtil/astSupport -I$(top_srcdir)/src/midend/astUtil/symbolicVal -I$(top_srcdir)/src/util/support -I$(top_srcdir)/src/util/graphs -I$(top_srcdir)/src/frontend/SageIII
 
