(Documentation) Generated API documentation is versioned
* The generate-api-documentation script can output documentation
  to places outside the ROSE source hierarchy.

* The "user" and "developer" configurations output their
  documentation to the $ROSE_SOURCE/docs/generated directory.

* The "user" and "developer" configurations output directories
  contain the ROSE version number.

* The generate-api-documentaion prints the name of the output
  directory.

RPM-608

--- a/docs/developer.cfg
+++ b/docs/developer.cfg
@@ -74,7 +74,7 @@ PROJECT_NAME = "ROSE Developer API Documentation"
 @INCLUDE = $(ROSE_SOURCE)/docs/DoxygenSettings/OutputFiles.cfg
 @INCLUDE = $(ROSE_SOURCE)/docs/DoxygenSettings/SourceBrowsing.cfg
 @INCLUDE = $(ROSE_SOURCE)/docs/DoxygenSettings/OutputFormats.cfg
-OUTPUT_DIRECTORY = ROSE-Developer-Documentation
+OUTPUT_DIRECTORY = docs-generated-developer-$(ROSE_VERSION)
 
 # Filtering
 @INCLUDE = $(ROSE_SOURCE)/docs/DoxygenSettings/Scope.cfg
