--- a/docs/DoxygenSettings/OutputFiles.cfg
+++ b/docs/DoxygenSettings/OutputFiles.cfg
@@ -7,7 +7,7 @@
 # entered, it will be relative to the location where doxygen was started. If
 # left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = ROSE-User-Documentation
+OUTPUT_DIRECTORY       = docs-generated-user-$(ROSE_VERSION)
 
 # If the CREATE_SUBDIRS tag is set to YES then doxygen will create 4096 sub-
 # directories (in 2 levels) under the output directory of each output format and
