(Sarif) New ROSE SARIF implementation
The old implementation `::SARIFOutput` in
<3rdPartyLibraries/json/roseSarif.h> has a number of problems, namely:

* Output cannot be generated incrementally (important for long-running analyses).
* None of the public API functions are documented.
* There are no unit tests.
* The implementation is 6000+ lines of header file.
* The implementation doesn't check for user errors (only has internal comments describing the contract).
* The implementation pollutes the root namespace.
* The main class is not PascalCase ("SARIFOutput", should be "SarifOutput").
* The word "output" in its name means we'll be unable to easily add future input capability.
* The header file has the wrong path name ("3rdPartyLibraries/json", should be same as namespace)
* The header file has the wrong base name ("roseSarif", should be same as class).
* The header file has the wrong file extension (".hpp", should be ".h")

The replacement, Rose::Sarif, fixes all of this and is less than a quarter the size.

RPM-613

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -705,9 +705,9 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Unparser \
 			 @top_srcdir@/src/Rose/CodeGen \
 			 @top_srcdir@/src/Rose/CommandLine \
+			 @top_srcdir@/src/Rose/Sarif \
 			 @top_srcdir@/src/Rose/StringUtility \
 			 @top_srcdir@/src/Rose/Traits \
-			 @top_srcdir@/src/Rose/Tree \			 
 			 @top_srcdir@/src/Rosebud \
                          @top_srcdir@/src/ROSETTA/src/binaryInstruction.C \
                          @top_srcdir@/src/frontend/Disassemblers \
