--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -4,14 +4,15 @@
 # Namespaces within ::Rose (see top comment). Every namespace will
 # have a directory listed here, and every directory here is a
 # namespace.
+add_subdirectory(AST)
 add_subdirectory(BinaryAnalysis)
+add_subdirectory(CodeGen)
 add_subdirectory(Color)
 add_subdirectory(CommandLine)
 add_subdirectory(Diagnostics)
 add_subdirectory(FileSystem)
+add_subdirectory(Sarif)
 add_subdirectory(StringUtility)
-add_subdirectory(AST)
-add_subdirectory(CodeGen)
 add_subdirectory(Traits)
 
 # needed to properly define ROSE_UTIL_API
