--- a/docs/DoxygenSettings/Examples.cfg
+++ b/docs/DoxygenSettings/Examples.cfg
@@ -6,10 +6,11 @@
 # that contain example code fragments that are included (see the \include
 # command).
 
-EXAMPLE_PATH           = $(ROSE_SOURCE)/tests/smoke/unit/Sawyer \
-		         $(ROSE_SOURCE)/tests/nonsmoke/functional/BinaryAnalysis \
-			 $(ROSE_SOURCE)/src/Sawyer/docs/examples \
-			 $(ROSE_SOURCE)/tutorial/binaryAnalysis
+EXAMPLE_PATH           = $(ROSE_SOURCE)/tests/smoke/unit \
+                         $(ROSE_SOURCE)/tests/smoke/unit/Sawyer \
+                         $(ROSE_SOURCE)/tests/nonsmoke/functional/BinaryAnalysis \
+                         $(ROSE_SOURCE)/src/Sawyer/docs/examples \
+                         $(ROSE_SOURCE)/tutorial/binaryAnalysis
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
