(Sarif) Added Sarif::Rule objects
* A rule holds meta data associated with a result. Results point
  to rules.

RPM-505

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -601,6 +601,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/Sarif/Log.h								\
 	Rose/Sarif/Node.h								\
 	Rose/Sarif/Result.h								\
+	Rose/Sarif/Rule.h								\
 	Rose/SourceLocation.h								\
 	Rose/StringUtility.h								\
 	Rose/StringUtility/Convert.h							\
