--- a/src/backend/unparser/Makefile_variables
+++ b/src/backend/unparser/Makefile_variables
@@ -31,6 +31,7 @@ unparser_la_sources=\
 
 unparser_includeHeaders=\
 	$(unparser_headers) \
+	$(unparserPath)/UnparserDelegate.h \
 	$(unparseCxxCodeGeneration_includeHeaders) \
 	$(unparseFormat_includeHeaders) \
 	$(unparseFortran_includeHeaders) \
