--- a/src/Rose/Sarif/CMakeLists.txt
+++ b/src/Rose/Sarif/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_library(roseSarif OBJECT
   Analysis.C
   Artifact.C
+  CodeFlow.C
   Exception.C
   Location.C
   Log.C
   Node.C
   Result.C
   Rule.C
+  ThreadFlow.C
+  ThreadFlowLocation.C
 )
 
 add_dependencies(roseSarif rosetta_generated)
@@ -15,11 +18,14 @@ install(FILES
   Analysis.h
   Artifact.h
   BasicTypes.h
+  CodeFlow.h
   Exception.h
   Location.h
   Log.h
   Node.h
   Result.h
   Rule.h
+  ThreadFlow.h
+  ThreadFlowLocation.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/Sarif)
